parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instruction_lines
Rule 2     program -> empty
Rule 3     empty -> <empty>
Rule 4     instruction_lines -> instruction_lines instruction_line
Rule 5     instruction_lines -> instruction_line
Rule 6     instruction_line -> instruction ;
Rule 7     instruction_line -> if_else
Rule 8     instruction_line -> while_loop
Rule 9     instruction_line -> for_loop
Rule 10    instruction_line -> code_block
Rule 11    if_else -> IF condition instruction_line
Rule 12    if_else -> IF condition instruction_line ELSE instruction_line
Rule 13    while_loop -> WHILE condition instruction_line
Rule 14    for_loop -> FOR identifier = range instruction_line
Rule 15    code_block -> { program }
Rule 16    instruction -> assignment
Rule 17    instruction -> printing
Rule 18    instruction -> continue_statement
Rule 19    instruction -> break_statement
Rule 20    instruction -> returning
Rule 21    continue_statement -> CONTINUE
Rule 22    break_statement -> BREAK
Rule 23    assignment -> identifier assignment_op expression
Rule 24    printing -> PRINT array_line
Rule 25    returning -> RETURN expression
Rule 26    assignment_op -> =
Rule 27    assignment_op -> ADDASSIGN
Rule 28    assignment_op -> SUBASSIGN
Rule 29    assignment_op -> MULASSIGN
Rule 30    assignment_op -> DIVASSIGN
Rule 31    condition -> ( bool_expression )
Rule 32    bool_expression -> expression comparison_op expression
Rule 33    comparison_op -> <
Rule 34    comparison_op -> >
Rule 35    comparison_op -> EQ
Rule 36    comparison_op -> NEQ
Rule 37    comparison_op -> GEQ
Rule 38    comparison_op -> LEQ
Rule 39    range -> id_or_number : id_or_number
Rule 40    expression -> expression_binary
Rule 41    expression -> array
Rule 42    expression -> elementary
Rule 43    expression -> array_special
Rule 44    expression -> negation
Rule 45    expression -> transposition
Rule 46    expression -> expression_group
Rule 47    array -> [ array_lines ]
Rule 48    array_lines -> array_lines ; array_line
Rule 49    array_lines -> array_line
Rule 50    array_line -> array_line , expression
Rule 51    array_line -> expression
Rule 52    array_special -> ZEROS array_special_specifier
Rule 53    array_special -> ONES array_special_specifier
Rule 54    array_special -> EYE array_special_specifier
Rule 55    array_special_specifier -> ( id_or_number )
Rule 56    transposition -> identifier '
Rule 57    transposition -> array '
Rule 58    negation -> - expression
Rule 59    elementary -> id_or_number
Rule 60    elementary -> text
Rule 61    text -> STRING
Rule 62    id_or_number -> identifier
Rule 63    id_or_number -> number
Rule 64    identifier -> ID [ array_line ]
Rule 65    identifier -> ID
Rule 66    number -> integer
Rule 67    number -> real
Rule 68    integer -> INTNUM
Rule 69    real -> REALNUM
Rule 70    expression_binary -> normal_binary_expression
Rule 71    expression_binary -> dot_binary_expression
Rule 72    normal_binary_expression -> add_expression
Rule 73    normal_binary_expression -> sub_expression
Rule 74    normal_binary_expression -> mul_expression
Rule 75    normal_binary_expression -> div_expression
Rule 76    dot_binary_expression -> dot_add_expression
Rule 77    dot_binary_expression -> dot_sub_expression
Rule 78    dot_binary_expression -> dot_mul_expression
Rule 79    dot_binary_expression -> dot_div_expression
Rule 80    add_expression -> expression + expression
Rule 81    sub_expression -> expression - expression
Rule 82    mul_expression -> expression * expression
Rule 83    div_expression -> expression / expression
Rule 84    dot_add_expression -> expression DOTADD expression
Rule 85    dot_sub_expression -> expression DOTSUB expression
Rule 86    dot_mul_expression -> expression DOTMUL expression
Rule 87    dot_div_expression -> expression DOTDIV expression
Rule 88    expression_group -> ( expression )

Terminals, with rules where they appear

'                    : 56 57
(                    : 31 55 88
)                    : 31 55 88
*                    : 82
+                    : 80
,                    : 50
-                    : 58 81
/                    : 83
:                    : 39
;                    : 6 48
<                    : 33
=                    : 14 26
>                    : 34
ADDASSIGN            : 27
BREAK                : 22
CONTINUE             : 21
DIVASSIGN            : 30
DOTADD               : 84
DOTDIV               : 87
DOTMUL               : 86
DOTSUB               : 85
ELSE                 : 12
EQ                   : 35
EYE                  : 54
FOR                  : 14
GEQ                  : 37
ID                   : 64 65
IF                   : 11 12
INTNUM               : 68
LEQ                  : 38
MULASSIGN            : 29
NEQ                  : 36
ONES                 : 53
PRINT                : 24
REALNUM              : 69
RETURN               : 25
STRING               : 61
SUBASSIGN            : 28
WHILE                : 13
ZEROS                : 52
[                    : 47 64
]                    : 47 64
error                : 
{                    : 15
}                    : 15

Nonterminals, with rules where they appear

add_expression       : 72
array                : 41 57
array_line           : 24 48 49 50 64
array_lines          : 47 48
array_special        : 43
array_special_specifier : 52 53 54
assignment           : 16
assignment_op        : 23
bool_expression      : 31
break_statement      : 19
code_block           : 10
comparison_op        : 32
condition            : 11 12 13
continue_statement   : 18
div_expression       : 75
dot_add_expression   : 76
dot_binary_expression : 71
dot_div_expression   : 79
dot_mul_expression   : 78
dot_sub_expression   : 77
elementary           : 42
empty                : 2
expression           : 23 25 32 32 50 51 58 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88
expression_binary    : 40
expression_group     : 46
for_loop             : 9
id_or_number         : 39 39 55 59
identifier           : 14 23 56 62
if_else              : 7
instruction          : 6
instruction_line     : 4 5 11 12 12 13 14
instruction_lines    : 1 4
integer              : 66
mul_expression       : 74
negation             : 44
normal_binary_expression : 70
number               : 63
printing             : 17
program              : 15 0
range                : 14
real                 : 67
returning            : 20
sub_expression       : 73
text                 : 60
transposition        : 45
while_loop           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instruction_lines
    (2) program -> . empty
    (4) instruction_lines -> . instruction_lines instruction_line
    (5) instruction_lines -> . instruction_line
    (3) empty -> .
    (6) instruction_line -> . instruction ;
    (7) instruction_line -> . if_else
    (8) instruction_line -> . while_loop
    (9) instruction_line -> . for_loop
    (10) instruction_line -> . code_block
    (16) instruction -> . assignment
    (17) instruction -> . printing
    (18) instruction -> . continue_statement
    (19) instruction -> . break_statement
    (20) instruction -> . returning
    (11) if_else -> . IF condition instruction_line
    (12) if_else -> . IF condition instruction_line ELSE instruction_line
    (13) while_loop -> . WHILE condition instruction_line
    (14) for_loop -> . FOR identifier = range instruction_line
    (15) code_block -> . { program }
    (23) assignment -> . identifier assignment_op expression
    (24) printing -> . PRINT array_line
    (21) continue_statement -> . CONTINUE
    (22) break_statement -> . BREAK
    (25) returning -> . RETURN expression
    (64) identifier -> . ID [ array_line ]
    (65) identifier -> . ID

    $end            reduce using rule 3 (empty -> .)
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    {               shift and go to state 19
    PRINT           shift and go to state 20
    CONTINUE        shift and go to state 21
    BREAK           shift and go to state 22
    RETURN          shift and go to state 23
    ID              shift and go to state 24

    program                        shift and go to state 1
    instruction_lines              shift and go to state 2
    empty                          shift and go to state 3
    instruction_line               shift and go to state 4
    instruction                    shift and go to state 5
    if_else                        shift and go to state 6
    while_loop                     shift and go to state 7
    for_loop                       shift and go to state 8
    code_block                     shift and go to state 9
    assignment                     shift and go to state 10
    printing                       shift and go to state 11
    continue_statement             shift and go to state 12
    break_statement                shift and go to state 13
    returning                      shift and go to state 14
    identifier                     shift and go to state 18

state 1

    (0) S' -> program .



state 2

    (1) program -> instruction_lines .
    (4) instruction_lines -> instruction_lines . instruction_line
    (6) instruction_line -> . instruction ;
    (7) instruction_line -> . if_else
    (8) instruction_line -> . while_loop
    (9) instruction_line -> . for_loop
    (10) instruction_line -> . code_block
    (16) instruction -> . assignment
    (17) instruction -> . printing
    (18) instruction -> . continue_statement
    (19) instruction -> . break_statement
    (20) instruction -> . returning
    (11) if_else -> . IF condition instruction_line
    (12) if_else -> . IF condition instruction_line ELSE instruction_line
    (13) while_loop -> . WHILE condition instruction_line
    (14) for_loop -> . FOR identifier = range instruction_line
    (15) code_block -> . { program }
    (23) assignment -> . identifier assignment_op expression
    (24) printing -> . PRINT array_line
    (21) continue_statement -> . CONTINUE
    (22) break_statement -> . BREAK
    (25) returning -> . RETURN expression
    (64) identifier -> . ID [ array_line ]
    (65) identifier -> . ID

    $end            reduce using rule 1 (program -> instruction_lines .)
    }               reduce using rule 1 (program -> instruction_lines .)
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    {               shift and go to state 19
    PRINT           shift and go to state 20
    CONTINUE        shift and go to state 21
    BREAK           shift and go to state 22
    RETURN          shift and go to state 23
    ID              shift and go to state 24

    instruction_line               shift and go to state 25
    instruction                    shift and go to state 5
    if_else                        shift and go to state 6
    while_loop                     shift and go to state 7
    for_loop                       shift and go to state 8
    code_block                     shift and go to state 9
    assignment                     shift and go to state 10
    printing                       shift and go to state 11
    continue_statement             shift and go to state 12
    break_statement                shift and go to state 13
    returning                      shift and go to state 14
    identifier                     shift and go to state 18

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)
    }               reduce using rule 2 (program -> empty .)


state 4

    (5) instruction_lines -> instruction_line .

    IF              reduce using rule 5 (instruction_lines -> instruction_line .)
    WHILE           reduce using rule 5 (instruction_lines -> instruction_line .)
    FOR             reduce using rule 5 (instruction_lines -> instruction_line .)
    {               reduce using rule 5 (instruction_lines -> instruction_line .)
    PRINT           reduce using rule 5 (instruction_lines -> instruction_line .)
    CONTINUE        reduce using rule 5 (instruction_lines -> instruction_line .)
    BREAK           reduce using rule 5 (instruction_lines -> instruction_line .)
    RETURN          reduce using rule 5 (instruction_lines -> instruction_line .)
    ID              reduce using rule 5 (instruction_lines -> instruction_line .)
    $end            reduce using rule 5 (instruction_lines -> instruction_line .)
    }               reduce using rule 5 (instruction_lines -> instruction_line .)


state 5

    (6) instruction_line -> instruction . ;

    ;               shift and go to state 26


state 6

    (7) instruction_line -> if_else .

    IF              reduce using rule 7 (instruction_line -> if_else .)
    WHILE           reduce using rule 7 (instruction_line -> if_else .)
    FOR             reduce using rule 7 (instruction_line -> if_else .)
    {               reduce using rule 7 (instruction_line -> if_else .)
    PRINT           reduce using rule 7 (instruction_line -> if_else .)
    CONTINUE        reduce using rule 7 (instruction_line -> if_else .)
    BREAK           reduce using rule 7 (instruction_line -> if_else .)
    RETURN          reduce using rule 7 (instruction_line -> if_else .)
    ID              reduce using rule 7 (instruction_line -> if_else .)
    $end            reduce using rule 7 (instruction_line -> if_else .)
    }               reduce using rule 7 (instruction_line -> if_else .)
    ELSE            reduce using rule 7 (instruction_line -> if_else .)


state 7

    (8) instruction_line -> while_loop .

    IF              reduce using rule 8 (instruction_line -> while_loop .)
    WHILE           reduce using rule 8 (instruction_line -> while_loop .)
    FOR             reduce using rule 8 (instruction_line -> while_loop .)
    {               reduce using rule 8 (instruction_line -> while_loop .)
    PRINT           reduce using rule 8 (instruction_line -> while_loop .)
    CONTINUE        reduce using rule 8 (instruction_line -> while_loop .)
    BREAK           reduce using rule 8 (instruction_line -> while_loop .)
    RETURN          reduce using rule 8 (instruction_line -> while_loop .)
    ID              reduce using rule 8 (instruction_line -> while_loop .)
    $end            reduce using rule 8 (instruction_line -> while_loop .)
    }               reduce using rule 8 (instruction_line -> while_loop .)
    ELSE            reduce using rule 8 (instruction_line -> while_loop .)


state 8

    (9) instruction_line -> for_loop .

    IF              reduce using rule 9 (instruction_line -> for_loop .)
    WHILE           reduce using rule 9 (instruction_line -> for_loop .)
    FOR             reduce using rule 9 (instruction_line -> for_loop .)
    {               reduce using rule 9 (instruction_line -> for_loop .)
    PRINT           reduce using rule 9 (instruction_line -> for_loop .)
    CONTINUE        reduce using rule 9 (instruction_line -> for_loop .)
    BREAK           reduce using rule 9 (instruction_line -> for_loop .)
    RETURN          reduce using rule 9 (instruction_line -> for_loop .)
    ID              reduce using rule 9 (instruction_line -> for_loop .)
    $end            reduce using rule 9 (instruction_line -> for_loop .)
    }               reduce using rule 9 (instruction_line -> for_loop .)
    ELSE            reduce using rule 9 (instruction_line -> for_loop .)


state 9

    (10) instruction_line -> code_block .

    IF              reduce using rule 10 (instruction_line -> code_block .)
    WHILE           reduce using rule 10 (instruction_line -> code_block .)
    FOR             reduce using rule 10 (instruction_line -> code_block .)
    {               reduce using rule 10 (instruction_line -> code_block .)
    PRINT           reduce using rule 10 (instruction_line -> code_block .)
    CONTINUE        reduce using rule 10 (instruction_line -> code_block .)
    BREAK           reduce using rule 10 (instruction_line -> code_block .)
    RETURN          reduce using rule 10 (instruction_line -> code_block .)
    ID              reduce using rule 10 (instruction_line -> code_block .)
    $end            reduce using rule 10 (instruction_line -> code_block .)
    }               reduce using rule 10 (instruction_line -> code_block .)
    ELSE            reduce using rule 10 (instruction_line -> code_block .)


state 10

    (16) instruction -> assignment .

    ;               reduce using rule 16 (instruction -> assignment .)


state 11

    (17) instruction -> printing .

    ;               reduce using rule 17 (instruction -> printing .)


state 12

    (18) instruction -> continue_statement .

    ;               reduce using rule 18 (instruction -> continue_statement .)


state 13

    (19) instruction -> break_statement .

    ;               reduce using rule 19 (instruction -> break_statement .)


state 14

    (20) instruction -> returning .

    ;               reduce using rule 20 (instruction -> returning .)


state 15

    (11) if_else -> IF . condition instruction_line
    (12) if_else -> IF . condition instruction_line ELSE instruction_line
    (31) condition -> . ( bool_expression )

    (               shift and go to state 28

    condition                      shift and go to state 27

state 16

    (13) while_loop -> WHILE . condition instruction_line
    (31) condition -> . ( bool_expression )

    (               shift and go to state 28

    condition                      shift and go to state 29

state 17

    (14) for_loop -> FOR . identifier = range instruction_line
    (64) identifier -> . ID [ array_line ]
    (65) identifier -> . ID

    ID              shift and go to state 24

    identifier                     shift and go to state 30

state 18

    (23) assignment -> identifier . assignment_op expression
    (26) assignment_op -> . =
    (27) assignment_op -> . ADDASSIGN
    (28) assignment_op -> . SUBASSIGN
    (29) assignment_op -> . MULASSIGN
    (30) assignment_op -> . DIVASSIGN

    =               shift and go to state 32
    ADDASSIGN       shift and go to state 33
    SUBASSIGN       shift and go to state 34
    MULASSIGN       shift and go to state 35
    DIVASSIGN       shift and go to state 36

    assignment_op                  shift and go to state 31

state 19

    (15) code_block -> { . program }
    (1) program -> . instruction_lines
    (2) program -> . empty
    (4) instruction_lines -> . instruction_lines instruction_line
    (5) instruction_lines -> . instruction_line
    (3) empty -> .
    (6) instruction_line -> . instruction ;
    (7) instruction_line -> . if_else
    (8) instruction_line -> . while_loop
    (9) instruction_line -> . for_loop
    (10) instruction_line -> . code_block
    (16) instruction -> . assignment
    (17) instruction -> . printing
    (18) instruction -> . continue_statement
    (19) instruction -> . break_statement
    (20) instruction -> . returning
    (11) if_else -> . IF condition instruction_line
    (12) if_else -> . IF condition instruction_line ELSE instruction_line
    (13) while_loop -> . WHILE condition instruction_line
    (14) for_loop -> . FOR identifier = range instruction_line
    (15) code_block -> . { program }
    (23) assignment -> . identifier assignment_op expression
    (24) printing -> . PRINT array_line
    (21) continue_statement -> . CONTINUE
    (22) break_statement -> . BREAK
    (25) returning -> . RETURN expression
    (64) identifier -> . ID [ array_line ]
    (65) identifier -> . ID

    }               reduce using rule 3 (empty -> .)
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    {               shift and go to state 19
    PRINT           shift and go to state 20
    CONTINUE        shift and go to state 21
    BREAK           shift and go to state 22
    RETURN          shift and go to state 23
    ID              shift and go to state 24

    program                        shift and go to state 37
    instruction_lines              shift and go to state 2
    empty                          shift and go to state 3
    instruction_line               shift and go to state 4
    instruction                    shift and go to state 5
    if_else                        shift and go to state 6
    while_loop                     shift and go to state 7
    for_loop                       shift and go to state 8
    code_block                     shift and go to state 9
    assignment                     shift and go to state 10
    printing                       shift and go to state 11
    continue_statement             shift and go to state 12
    break_statement                shift and go to state 13
    returning                      shift and go to state 14
    identifier                     shift and go to state 18

state 20

    (24) printing -> PRINT . array_line
    (50) array_line -> . array_line , expression
    (51) array_line -> . expression
    (40) expression -> . expression_binary
    (41) expression -> . array
    (42) expression -> . elementary
    (43) expression -> . array_special
    (44) expression -> . negation
    (45) expression -> . transposition
    (46) expression -> . expression_group
    (70) expression_binary -> . normal_binary_expression
    (71) expression_binary -> . dot_binary_expression
    (47) array -> . [ array_lines ]
    (59) elementary -> . id_or_number
    (60) elementary -> . text
    (52) array_special -> . ZEROS array_special_specifier
    (53) array_special -> . ONES array_special_specifier
    (54) array_special -> . EYE array_special_specifier
    (58) negation -> . - expression
    (56) transposition -> . identifier '
    (57) transposition -> . array '
    (88) expression_group -> . ( expression )
    (72) normal_binary_expression -> . add_expression
    (73) normal_binary_expression -> . sub_expression
    (74) normal_binary_expression -> . mul_expression
    (75) normal_binary_expression -> . div_expression
    (76) dot_binary_expression -> . dot_add_expression
    (77) dot_binary_expression -> . dot_sub_expression
    (78) dot_binary_expression -> . dot_mul_expression
    (79) dot_binary_expression -> . dot_div_expression
    (62) id_or_number -> . identifier
    (63) id_or_number -> . number
    (61) text -> . STRING
    (64) identifier -> . ID [ array_line ]
    (65) identifier -> . ID
    (80) add_expression -> . expression + expression
    (81) sub_expression -> . expression - expression
    (82) mul_expression -> . expression * expression
    (83) div_expression -> . expression / expression
    (84) dot_add_expression -> . expression DOTADD expression
    (85) dot_sub_expression -> . expression DOTSUB expression
    (86) dot_mul_expression -> . expression DOTMUL expression
    (87) dot_div_expression -> . expression DOTDIV expression
    (66) number -> . integer
    (67) number -> . real
    (68) integer -> . INTNUM
    (69) real -> . REALNUM

    [               shift and go to state 49
    ZEROS           shift and go to state 52
    ONES            shift and go to state 53
    EYE             shift and go to state 54
    -               shift and go to state 55
    (               shift and go to state 57
    STRING          shift and go to state 67
    ID              shift and go to state 24
    INTNUM          shift and go to state 70
    REALNUM         shift and go to state 71

    array_line                     shift and go to state 38
    expression                     shift and go to state 39
    expression_binary              shift and go to state 40
    array                          shift and go to state 41
    elementary                     shift and go to state 42
    array_special                  shift and go to state 43
    negation                       shift and go to state 44
    transposition                  shift and go to state 45
    expression_group               shift and go to state 46
    normal_binary_expression       shift and go to state 47
    dot_binary_expression          shift and go to state 48
    id_or_number                   shift and go to state 50
    text                           shift and go to state 51
    identifier                     shift and go to state 56
    add_expression                 shift and go to state 58
    sub_expression                 shift and go to state 59
    mul_expression                 shift and go to state 60
    div_expression                 shift and go to state 61
    dot_add_expression             shift and go to state 62
    dot_sub_expression             shift and go to state 63
    dot_mul_expression             shift and go to state 64
    dot_div_expression             shift and go to state 65
    number                         shift and go to state 66
    integer                        shift and go to state 68
    real                           shift and go to state 69

state 21

    (21) continue_statement -> CONTINUE .

    ;               reduce using rule 21 (continue_statement -> CONTINUE .)


state 22

    (22) break_statement -> BREAK .

    ;               reduce using rule 22 (break_statement -> BREAK .)


state 23

    (25) returning -> RETURN . expression
    (40) expression -> . expression_binary
    (41) expression -> . array
    (42) expression -> . elementary
    (43) expression -> . array_special
    (44) expression -> . negation
    (45) expression -> . transposition
    (46) expression -> . expression_group
    (70) expression_binary -> . normal_binary_expression
    (71) expression_binary -> . dot_binary_expression
    (47) array -> . [ array_lines ]
    (59) elementary -> . id_or_number
    (60) elementary -> . text
    (52) array_special -> . ZEROS array_special_specifier
    (53) array_special -> . ONES array_special_specifier
    (54) array_special -> . EYE array_special_specifier
    (58) negation -> . - expression
    (56) transposition -> . identifier '
    (57) transposition -> . array '
    (88) expression_group -> . ( expression )
    (72) normal_binary_expression -> . add_expression
    (73) normal_binary_expression -> . sub_expression
    (74) normal_binary_expression -> . mul_expression
    (75) normal_binary_expression -> . div_expression
    (76) dot_binary_expression -> . dot_add_expression
    (77) dot_binary_expression -> . dot_sub_expression
    (78) dot_binary_expression -> . dot_mul_expression
    (79) dot_binary_expression -> . dot_div_expression
    (62) id_or_number -> . identifier
    (63) id_or_number -> . number
    (61) text -> . STRING
    (64) identifier -> . ID [ array_line ]
    (65) identifier -> . ID
    (80) add_expression -> . expression + expression
    (81) sub_expression -> . expression - expression
    (82) mul_expression -> . expression * expression
    (83) div_expression -> . expression / expression
    (84) dot_add_expression -> . expression DOTADD expression
    (85) dot_sub_expression -> . expression DOTSUB expression
    (86) dot_mul_expression -> . expression DOTMUL expression
    (87) dot_div_expression -> . expression DOTDIV expression
    (66) number -> . integer
    (67) number -> . real
    (68) integer -> . INTNUM
    (69) real -> . REALNUM

    [               shift and go to state 49
    ZEROS           shift and go to state 52
    ONES            shift and go to state 53
    EYE             shift and go to state 54
    -               shift and go to state 55
    (               shift and go to state 57
    STRING          shift and go to state 67
    ID              shift and go to state 24
    INTNUM          shift and go to state 70
    REALNUM         shift and go to state 71

    expression                     shift and go to state 72
    expression_binary              shift and go to state 40
    array                          shift and go to state 41
    elementary                     shift and go to state 42
    array_special                  shift and go to state 43
    negation                       shift and go to state 44
    transposition                  shift and go to state 45
    expression_group               shift and go to state 46
    normal_binary_expression       shift and go to state 47
    dot_binary_expression          shift and go to state 48
    id_or_number                   shift and go to state 50
    text                           shift and go to state 51
    identifier                     shift and go to state 56
    add_expression                 shift and go to state 58
    sub_expression                 shift and go to state 59
    mul_expression                 shift and go to state 60
    div_expression                 shift and go to state 61
    dot_add_expression             shift and go to state 62
    dot_sub_expression             shift and go to state 63
    dot_mul_expression             shift and go to state 64
    dot_div_expression             shift and go to state 65
    number                         shift and go to state 66
    integer                        shift and go to state 68
    real                           shift and go to state 69

state 24

    (64) identifier -> ID . [ array_line ]
    (65) identifier -> ID .

    [               shift and go to state 73
    =               reduce using rule 65 (identifier -> ID .)
    ADDASSIGN       reduce using rule 65 (identifier -> ID .)
    SUBASSIGN       reduce using rule 65 (identifier -> ID .)
    MULASSIGN       reduce using rule 65 (identifier -> ID .)
    DIVASSIGN       reduce using rule 65 (identifier -> ID .)
    '               reduce using rule 65 (identifier -> ID .)
    +               reduce using rule 65 (identifier -> ID .)
    -               reduce using rule 65 (identifier -> ID .)
    *               reduce using rule 65 (identifier -> ID .)
    /               reduce using rule 65 (identifier -> ID .)
    DOTADD          reduce using rule 65 (identifier -> ID .)
    DOTSUB          reduce using rule 65 (identifier -> ID .)
    DOTMUL          reduce using rule 65 (identifier -> ID .)
    DOTDIV          reduce using rule 65 (identifier -> ID .)
    ,               reduce using rule 65 (identifier -> ID .)
    ;               reduce using rule 65 (identifier -> ID .)
    <               reduce using rule 65 (identifier -> ID .)
    >               reduce using rule 65 (identifier -> ID .)
    EQ              reduce using rule 65 (identifier -> ID .)
    NEQ             reduce using rule 65 (identifier -> ID .)
    GEQ             reduce using rule 65 (identifier -> ID .)
    LEQ             reduce using rule 65 (identifier -> ID .)
    ]               reduce using rule 65 (identifier -> ID .)
    )               reduce using rule 65 (identifier -> ID .)
    :               reduce using rule 65 (identifier -> ID .)
    IF              reduce using rule 65 (identifier -> ID .)
    WHILE           reduce using rule 65 (identifier -> ID .)
    FOR             reduce using rule 65 (identifier -> ID .)
    {               reduce using rule 65 (identifier -> ID .)
    PRINT           reduce using rule 65 (identifier -> ID .)
    CONTINUE        reduce using rule 65 (identifier -> ID .)
    BREAK           reduce using rule 65 (identifier -> ID .)
    RETURN          reduce using rule 65 (identifier -> ID .)
    ID              reduce using rule 65 (identifier -> ID .)


state 25

    (4) instruction_lines -> instruction_lines instruction_line .
